--- a/infra/config/account-config.yaml
+++ b/infra/config/account-config.yaml
@@ -9,4 +9,6 @@ myAccount:
   datadogEnabled: FILLED_IN_BY_CI
   datadogApiKey: FILLED_IN_BY_CI
   datadogAppKey: FILLED_IN_BY_CI
+  workerTimeout: FILLED_IN_BY_CI
+  workerScaleToZero: FILLED_IN_BY_CI
   #FILLED IN BY IAC CI
