--- a/charts/nodejs/templates/scale-pods-right-to-api.yaml
+++ b/charts/nodejs/templates/scale-pods-right-to-api.yaml
@@ -1,4 +1,4 @@
-{{ if and (contains "api" .Values.biomageCi.repo) (eq .Values.myAccount.workerScaleToZero "true") }}
+{{ if and (contains "api" .Values.biomageCirepo) (or (eq .Values.kubernetes.env "staging") (eq .Values.myAccount.accountId "160782110667")) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
