--- a/charts/nodejs/templates/scale-pods-right-to-api.yaml
+++ b/charts/nodejs/templates/scale-pods-right-to-api.yaml
@@ -1,4 +1,4 @@
-{{ if contains "api" .Values.biomageCirepo }}
+{{ if contains "api" .Values.biomageCi.repo }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
