--- a/charts/nodejs/templates/scale-pods-right-to-api.yaml
+++ b/charts/nodejs/templates/scale-pods-right-to-api.yaml
@@ -1,4 +1,4 @@
-{{ if contains "api" .Values.biomageCi.repo }}
+{{ if and (contains "api" .Values.biomageCi.repo) (eq .Values.biomageCi.sandboxId "default") }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -7,11 +7,13 @@ rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
   verbs: ["update", "get"]
+{{ end }}
 ---
+{{ if contains "api" .Values.biomageCi.repo }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: api-can-scale-worker-pods
+  name: api-can-scale-worker-pods-{{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
