Remove config entries that are no longer needed
Signed-off-by: ivababukova <iva@biomage.net>

--- a/infra/config/github-environments-config.yaml
+++ b/infra/config/github-environments-config.yaml
@@ -1,12 +1,7 @@
-Biomage:
-  publicFacing: true
-  selfSignedCertificate: false
 HMS:
   publicFacing: true
   selfSignedCertificate: false
 trv:
   publicFacing: false
   selfSignedCertificate: true
-alabs:
-  publicFacing: false
-  selfSignedCertificate: false
+  datadogEnabled: false
