--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -831,9 +831,10 @@ jobs:
             # --location - Follow redirects
             curl --silent --remote-name --location "$PULL_SCRIPT_URL"
 
+            # make script executable
+            chmod +x falcon-container-sensor-pull.sh
+
             # download latest version of the Falcon Container (for fargate) and copy it to ECS
-            docker login
-            
             ./falcon-container-sensor-pull.sh \
             --client-id ${FALCON_CLIENT_ID} \
             --client-secret ${FALCON_CLIENT_SECRET} \
