--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -856,12 +856,12 @@ jobs:
             --set node.enabled=false \
             --set container.enabled=true \
             --set falcon.cid="$FALCON_CID" \
-            --set container.image.repository="${ECR_REGISTRY}/falcon-sensor"
+            --set container.image.repository="${ECR_REGISTRY}/falcon-sensor/falcon-sensor"
 
             # install node sensor (for ec2)
-            helm upgrade --install falcon-helm crowdstrike/falcon-sensor \
+            helm upgrade --install falcon-node-helm crowdstrike/falcon-sensor \
             --set falcon.cid="$FALCON_CID" \
-            --set node.image.repository="${ECR_REGISTRY}/falcon-node-sensor"
+            --set node.image.repository="${ECR_REGISTRY}/falcon-node-sensor/falcon-sensor"
 
           else
             echo "CrowdStrike CID missing, skipping falcon sensor setup"
