--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -841,12 +841,24 @@ jobs:
             --type falcon-container \
             --copy "${ECR_REGISTRY}/falcon-node-sensor"
 
+            ./falcon-container-sensor-pull.sh \
+            --client-id ${FALCON_CLIENT_ID} \
+            --client-secret ${FALCON_CLIENT_SECRET} \
+            --type falcon-container \
+            --get-image-path
+
             # download latest version of the Falcon Node Sensor (for EC2) and copy it to ECS
             ./falcon-container-sensor-pull.sh \
             --client-id ${FALCON_CLIENT_ID} \
             --client-secret ${FALCON_CLIENT_SECRET} \
             --type falcon-sensor \
             --copy "${ECR_REGISTRY}/falcon-sensor"
+
+            ./falcon-container-sensor-pull.sh \
+            --client-id ${FALCON_CLIENT_ID} \
+            --client-secret ${FALCON_CLIENT_SECRET} \
+            --type falcon-sensor \
+            --get-image-path
 
             # install container sensor (for fargate) into a customized namespace
             helm repo add crowdstrike https://crowdstrike.github.io/falcon-helm
