--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -883,8 +883,9 @@ jobs:
             --set container.image.repository="${ECR_REGISTRY}/falcon-container/falcon-sensor" \
             --set container.image.tag="$FALCON_CONTAINER_IMAGE_TAG"
 
-            # install node sensor (for ec2) with different release name (falcon-node-helm)
+            # install node sensor (for ec2) with different release name (falcon-sensor-helm)
             helm upgrade --install falcon-sensor-helm crowdstrike/falcon-sensor \
+            -n falcon-system --create-namespace \
             --set falcon.cid="$FALCON_CID" \
             --set node.image.repository="${ECR_REGISTRY}/falcon-sensor/falcon-sensor" \
             --set node.image.tag="$FALCON_SENSOR_IMAGE_TAG"
