--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -791,10 +791,10 @@ jobs:
             oci://public.ecr.aws/orcasecurity/helm-k8s-tunnel \
             --set tunnelAddr=tunnel.production.us-east-1.orcasecurity.net \
             --set tunnelId="${{ secrets.ORCA_TUNNEL_ID }}" \
-            --set tunnelToken="${{ secrets.ORCA_TUNNEL_TOKEN }} \
+            --set tunnelToken="${{ secrets.ORCA_TUNNEL_TOKEN }}" \
             --set clusterName="biomage-$CLUSTER_ENV" \
             --set cloudVendorId="${{ secrets.AWS_ACCOUNT_ID }}" \
-            --set region=${{ secrets.AWS_REGION }} \
+            --set region="${{ secrets.AWS_REGION }}" \
             --set clusterType=eks
           else
             echo "ORCA_TUNNEL_ID missing, skipping ORCA CSPM setup."
